@@ -13,8 +13,8 @@ aSample with bad entries (see log)= class=Sample name=a sample with bad entries 
 aSample with bad entries (see log)= class=Sample name=a sample with bad entries implementation=class=SampleImplementation name=a sample with bad entries size=2 dimension=4 description=[data_0,data_1,data_2,data_3] data=[[-1.2,2.3,3.4,-4.5],[0.9,9.8,8.4,5.4]]
 aSample with missing entries (see log)= class=Sample name=a sample with missing entries implementation=class=SampleImplementation name=a sample with missing entries size=2 dimension=4 description=[data_0,data_1,data_2,data_3] data=[[-1.2,2.3,3.4,-4.5],[6.5,9,7.3,-3.7]]
 aSample with missing entries (see log)= class=Sample name=a sample with missing entries implementation=class=SampleImplementation name=a sample with missing entries size=2 dimension=4 description=[data_0,data_1,data_2,data_3] data=[[-1.2,2.3,3.4,-4.5],[6.5,9,7.3,-3.7]]
-aSample with special chars (see log)= class=Sample name=a sample with special chars implementation=class=SampleImplementation name=a sample with special chars size=2 dimension=3 description=[X1,X2!()#{}%&<=>^$+-*./:\|`?,X3[unit]] data=[[5.6,-6.7,7.8],[-0.1,3.2,7.5]]
-aSample with special chars (see log)= class=Sample name=a sample with special chars implementation=class=SampleImplementation name=a sample with special chars size=2 dimension=3 description=[X1,X2!()#{}%&<=>^$+-*./:\|`?,X3[unit]] data=[[5.6,-6.7,7.8],[-0.1,3.2,7.5]]
+aSample with special chars (see log)= class=Sample name=a sample with special chars implementation=class=SampleImplementation name=a sample with special chars size=2 dimension=3 description=[X1;,X2!()#{}%&<=>^$+-*./:\|`?,X3[unit]] data=[[5.6,-6.7,7.8],[-0.1,3.2,7.5]]
+aSample with special chars (see log)= class=Sample name=a sample with special chars implementation=class=SampleImplementation name=a sample with special chars size=2 dimension=3 description=[X1;,X2!()#{}%&<=>^$+-*./:\|`?,X3[unit]] data=[[5.6,-6.7,7.8],[-0.1,3.2,7.5]]
 Stream to R format =  matrix(c(5.6,-0.1,-6.7,3.2,7.8,7.5), nrow=2, ncol=3)
 aSample with comments= class=Sample name=sample.csv implementation=class=SampleImplementation name=sample.csv size=3 dimension=4 description=[h1,h2,h3,h4] data=[[-1.2,2.3,3.4,-4.5],[5.6,-6.7,7.8,8.9],[-0.1,3.2,5.1,7.5]]
 aSample from CRLF file= class=Sample name=sample.csv implementation=class=SampleImplementation name=sample.csv size=3 dimension=4 description=[data_0,data_1,data_2,data_3] data=[[-1.2,2.3,3.4,-4.5],[5.6,-6.7,7.8,8.9],[-0.1,3.2,7.5,4.6]]
