@@ -84,7 +84,7 @@ try:
     # 6th sample
     f = open('sample.csv', 'w')
     f.write(
-        '"X1";"X2!()#{}%&<=>^$+-*./:\\|`?";"X3[unit]"\n5.6;-6.7;7.8\n-0.1;3.2;7.5 \n')
+        '"X1;";"X2!()#{}%&<=>^$+-*./:\\|`?";"X3[unit]"\n5.6;-6.7;7.8\n-0.1;3.2;7.5 \n')
     f.close()
     aSample = Sample.ImportFromCSVFile('sample.csv', ';')
     aSample.setName("a sample with special chars")
